--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy==1.20.1
-scikit_learn==1.2.2
-scipy==1.7.0
-submodlib==1.1.5
+numpy==1.24.4
+scikit-learn==1.2.2
+scipy==1.8.0
+# submodlib==1.1.5
 torch==1.9.1
 torchdatasets==0.2.0
 torchvision==0.10.1
